<resources>
    <string name="app_name">TrofLib</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="book">Book</string>
    <string name="title">Title</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="empty_book_name">Book name must have a value.</string>
    <string name="book_successfully_added">Book successfully added.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="question_delete">Are you sure you want delete?</string>
    <string name="book_successfully_updated">Book successfully updated.</string>
    <string name="book_successfully_deleted">Book successfully deleted.</string>
    <string name="error_resources_wrong_password">Wrong password</string>
    <string name="uppdate">Update</string>
    <string name="api_error_something_went_wrong">Ups! Something went wrong. Please try again.</string>
    <string name="api_error_report_not_found">This report was not found, probably is was deleted. Reload data or try again.</string>
    <string name="api_error_authorisation_failed">Authorization failed. Please login again.</string>
    <string name="api_error_wrong_login">Wrong username or password.</string>
    <string name="error_something_went_wrong">Ups! Something went wrong. Please try again.</string>
    <string name="fill_username_and_password">Please fill username and password!</string>
    <string name="books_list">Books</string>
    <string name="only_edit_your_books">Ups! You can only update or delete your books.</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="dtlaunch">Data de lançamento</string>
    <string name="publishcompany">Publish Company</string>
    <string name="npages">Nº páginas</string>
    <string name="cape">Capa</string>
    <string name="hello">Hello</string>
    <string name="logout">Logout</string>
    <string name="logout_question">Do you want log out?</string>
    <string name="refresh">Refresh</string>
    <string name="location">Location</string>
    <string name="add_book">New book</string>
    <string name="maps">Maps</string>
    <string name="update_book">Update book</string>
    <string name="fill_title_and_description">Please fill title and description!</string>
    <string name="successfull_added_new_book">Book has been successfully added!</string>
    <string name="delete_book">Delete book</string>
    <string name="question_delete_book">Are you sure you want delete this report?</string>
    <string name="successfull_deleted_book">Book has been successfully deleted!</string>
    <string name="successfull_updated_book">Book has been successfully updated!</string>
    <string name="session_expired">Session expired</string>
    <string name="session_expired_message">Session has been expired. Please sign in.</string>
    <string name="map">Kotlin Google Map Current Location</string>
    <string name="title_activity_maps">Map Current Location</string>
</resources>