<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.update_book.UpdateBookFragment">

    <LinearLayout
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="25dp">

        <include
            android:id="@+id/llProgressBar"
            layout="@layout/progressbar"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/update_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25sp"
            android:text="@string/author"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/update_book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25sp"
            android:text="@string/genre"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/update_book_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25sp"
            android:text="@string/dtlaunch"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/update_book_dtlaunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25sp"
            android:text="@string/publishcompany"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/update_book_publishcompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25sp"
            android:text="@string/npages"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/update_book_npages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25sp"
            android:text="@string/cape"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/update_book_cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</FrameLayout>